--- a/appExa/appExa/Registro.xaml
+++ b/appExa/appExa/Registro.xaml
@@ -6,72 +6,76 @@
         xmlns:local="clr-namespace:appExa"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Registro" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="NoResize">
+        Title="Registro" Height="800" Width="1200" WindowStartupLocation="CenterScreen" WindowStyle="None" ResizeMode="CanMinimize">
     <Grid MouseDown="Border_MouseDown">
         <Grid.Background>
-            <LinearGradientBrush StartPoint="0.1,0" EndPoint="0.9,1">
-                <GradientStop Color="#F8C471" Offset="1"/>
-                <GradientStop Color="#E74C3C" Offset="0"/>
+            <LinearGradientBrush MappingMode="Absolute" StartPoint="900.000,-800.000" EndPoint="900.000,0.000">
+                <LinearGradientBrush.GradientStops>
+                    <GradientStop Offset="0.00" Color="#ff7f2e17"/>
+                    <GradientStop Offset="1.00" Color="#ffd3623b"/>
+                </LinearGradientBrush.GradientStops>
+                <LinearGradientBrush.Transform>
+                    <MatrixTransform Matrix="1.000,0.000,-0.000,-1.000,-600.000,0.000" />
+                </LinearGradientBrush.Transform>
             </LinearGradientBrush>
         </Grid.Background>
-        <Border Height="390" VerticalAlignment="Top" CornerRadius="0 0 0 180" Background="#E67E22" MouseDown="Border_MouseDown"/>
         <StackPanel Orientation="Horizontal">
             <StackPanel Width="100">
                 <Button Margin="10 20" Style="{StaticResource MaterialDesignFloatingActionButton}" Background="{x:Null}"
                         x:Name="Volver" Click="Volver_OnClick">
-                    <materialDesign:PackIcon Kind="ArrowBack" Foreground="Azure" Width="20" Height="20" />
+                    <materialDesign:PackIcon Kind="ArrowBack" Foreground="#ffffff" Width="20" Height="20" />
                 </Button>
             </StackPanel>
-            <StackPanel Width="600">
-                <StackPanel Margin="-10 40">
-                    <TextBlock Text="Registrarse" Margin="10" Foreground="Bisque" TextAlignment="Center" FontSize="40" FontFamily="Roboto Thin" />
-                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+            <StackPanel Width="1000">
+                <StackPanel Margin="10 40">
+                    <TextBlock Text="Registrarse" Margin="30 80 0 10" Foreground="#ffffff" TextAlignment="Center" FontSize="70" FontFamily="Roboto Thin" />
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 70 0 0">
                         <StackPanel Orientation="Horizontal" Margin="10">
-                            <materialDesign:PackIcon Kind="Face" Width="25" Height="25" Foreground="Azure" />
-                            <TextBox x:Name="Nombre" Margin="10 0" materialDesign:HintAssist.Hint="Nombre" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                            <materialDesign:PackIcon Kind="Face" Width="25" Height="25" Foreground="#ffffff" />
+                            <TextBox x:Name="Nombre" Margin="10 0" materialDesign:HintAssist.Hint="Nombre" Foreground="#ffffff" Width="250" BorderBrush="#ffffff" CaretBrush="#ffffff" SelectionBrush="#ffffff"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="10">
                             <materialDesign:PackIcon Kind="Face" Width="25" Height="25" Foreground="Azure" />
-                            <TextBox x:Name="Apellido" Margin="10 0" materialDesign:HintAssist.Hint="Apellido" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                            <TextBox x:Name="Apellido" Margin="10 0" materialDesign:HintAssist.Hint="Apellido" Foreground="#ffffff" Width="250" BorderBrush="#ffffff" CaretBrush="#ffffff" SelectionBrush="#ffffff"/>
                         </StackPanel>
                     </StackPanel>
-                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 10 0 0">
                         <StackPanel Orientation="Horizontal" Margin="10">
-                            <materialDesign:PackIcon Kind="Email" Width="25" Height="25" Foreground="Azure" />
-                            <TextBox x:Name="Email" Margin="10 0" materialDesign:HintAssist.Hint="Email" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                            <materialDesign:PackIcon Kind="Email" Width="25" Height="25" Foreground="#ffffff" />
+                            <TextBox x:Name="Email" Margin="10 0" materialDesign:HintAssist.Hint="Email" Foreground="#ffffff" Width="250" BorderBrush="#ffffff" CaretBrush="#ffffff" SelectionBrush="#ffffff"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="10">
                             <materialDesign:PackIcon Kind="User" Width="25" Height="25" Foreground="Azure" />
-                            <TextBox x:Name="Usuario" Margin="10 0" materialDesign:HintAssist.Hint="Usuario" Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                            <TextBox x:Name="Usuario" Margin="10 0" materialDesign:HintAssist.Hint="Usuario" Foreground="#ffffff" Width="250" BorderBrush="#ffffff" CaretBrush="#ffffff" SelectionBrush="#ffffff"/>
                         </StackPanel>
                     </StackPanel>
                     <StackPanel Visibility="Collapsed">
-                        <Label Height="26" FontSize="14" HorizontalAlignment="Right" Foreground="Azure" FontWeight="DemiBold">¿No tenes una cuenta?</Label>
+                        <Label Height="26" FontSize="14" HorizontalAlignment="Right" Foreground="#ffffff" FontWeight="DemiBold">¿No tenes una cuenta?</Label>
                     </StackPanel>
-                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                    <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Margin="0 10 0 0">
                         <StackPanel Orientation="Horizontal" Margin="10">
                             <materialDesign:PackIcon Kind="Password" Width="25" Height="25" Foreground="Azure" />
                             <PasswordBox x:Name="Contrasena" Margin="10 0" materialDesign:HintAssist.Hint="Contrasena" 
-                                         Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                                         Foreground="#ffffff" Width="250" BorderBrush="#ffffff" CaretBrush="#ffffff" SelectionBrush="#ffffff"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="10">
-                            <materialDesign:PackIcon Kind="PasswordCheck" Width="25" Height="25" Foreground="Azure" />
+                            <materialDesign:PackIcon Kind="PasswordCheck" Width="25" Height="25" Foreground="#ffffff" />
                             <PasswordBox x:Name="ConfirmContrasena" Margin="10 0" materialDesign:HintAssist.Hint="Confirmar Contrasena" 
-                                         Foreground="Azure" Width="250" BorderBrush="White" CaretBrush="Azure" SelectionBrush="Azure"/>
+                                         Foreground="#ffffff" Width="250" BorderBrush="#ffffff" CaretBrush="#ffffff" SelectionBrush="#ffffff"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel Margin="10" HorizontalAlignment="Center">
-                    <Button Width="100" Height="40" Style="{StaticResource MaterialDesignRaisedButton}"
-                            materialDesign:ButtonAssist.CornerRadius="10" BorderThickness="0" Background="Azure"
-                            Foreground="Chocolate" Click="BotonRegistrarse_OnClick" Content="Listo">
+                    <Button Width="150" Height="40" Style="{StaticResource MaterialDesignRaisedButton}"
+                            materialDesign:ButtonAssist.CornerRadius="20" BorderThickness="0" Background="#ffe28a4f"
+                            Foreground="#ffffff" Click="BotonRegistrarse_OnClick" Content="Confirmar">
                     </Button>
                 </StackPanel>
             </StackPanel>
             <StackPanel Width="100">
                 <Button Margin="10 20" Style="{StaticResource MaterialDesignFloatingActionButton}" Background="{x:Null}"
                         x:Name="Cerrar" Click="Cerrar_OnClick">
-                    <materialDesign:PackIcon Kind="Close" Foreground="Azure" Width="20" Height="20" />
+                    <materialDesign:PackIcon Kind="Close" Foreground="#ffffff" Width="20" Height="20" />
                 </Button>
             </StackPanel>
         </StackPanel>
